<resources>
    <string name="upload_photo">Upload photo</string>
    <string name="send_me_a_copy">Send me a copy</string>
    <string name="incoming_call_answer">Answer</string>
    <string name="incoming_call_decline">Decline</string>
    <string name="incoming_call_ringing_title">Incoming call</string>
    <string name="incoming_call_ringing_body">Ringing…</string>
    <string name="app_name">Volunteers</string>
    <string name="Login">Username/Number</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword"><u>Forgot Password?</u></string>
    <string name="ResetPassword">Reset Password</string>
    <string name="SignUp"><u>Don\'t have an account?</u></string>
    <string name="Button">Sign in</string>
    <string name="ShowPassword">ShowPassword</string>
    <string name="LoginPage">Login</string>
    <string name="NewPassword">NewPassword</string>
    <string name="ConfirmNewPassword">ConfirmPassword</string>
    <string name="Reset">Reset</string>
    <string name="changePassword">Change Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="approved">Approved</string>
    <string name="waitlisted">Unapproved</string>
    <string name="list_of_events">LIST OF EVENTS</string>
    <string name="Report">Report</string>
    <string name="ReportName">UserName/Email</string>
    <string name="reportSubmit">Submit</string>
    <string name="reportEmail">Email</string>
    <string name="reportEvent">Event he/she in</string>
    <string name="reportReason">Reason</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="feedback">FeedBack</string>
    <string name="feedbackName">Name</string>
    <string name="feedbackEmail">Email</string>
    <string name="feedbackSubject">Subject</string>
    <string name="feedbackSuggestions">Suggestions</string>
    <string name="feedbackSubmit">Send Feedback</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="req_events">Req Events</string>
    <string name="hosted_events">Hosted Events</string>
    <string name="date_of_the_event">Date of the event:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="select_date">Select date</string>
    <string name="event_name">Event name:</string>
    <string name="rupees">Dollars</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="default_web_client_id">client_id</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="name">Name</string>
    <string name="e_mail_id">E-mail id</string>
    <string name="example_abc_com">example@abc.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number_input_field">Phone number input field</string>
    <string name="min_length_6">Min length : 6</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="host">Host</string>
    <string name="go_back">Go back</string>
    <string name="registered_and_accepted">registered and accepted</string>
    <string name="registered">Registered</string>
    <string name="successfully_registered">Registered</string>
    <string name="event_names">Event Name</string>
    <string name="hey_this_is_chat">hey! this is chat</string>
    <string name="change_phoneNumber">Change PhoneNumber</string>
    <string name="newPhoneNumber">NewPhoneNumber</string>
    <string name="confirmNewPhoneNumber">ConfirmNewPhoneNumber</string>
    <string name="change_username">Change UserName</string>
    <string name="newUsername">NewUserName</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="n_n_nwelcome_to_volunteers_app">\n\n\nWelcome To Volunteers App!</string>
    <string name="successfully_hosted">Successfully Hosted!</string>
    <string name="event_added_to_hosted_events">Event added to hosted events</string>
    <string name="my_events">My events</string>
    <string name="please_enter_the_e_mail_address_used_for_registration_a_link_will_be_sent_to_reset_your_password">Please Enter the e-mail address used for registration. A link will be sent to reset your password.</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="submit_forgot_password">SUBMIT</string>
    <string name="example_abc_com_forgot_password">example@abc.com</string>
    <string name="type_of_the_event">Type of the event:</string>
    <string name="description">Description</string>
    <string name="this_is_hosting_tab">this is hosting tab</string>
    <string name="chatBox">CHatBox</string>
    <string name="hey_this_is_profile">hey! this is profile</string>
    <string name="hey_this_is_message">hey! this is message</string>
    <string name="binaryWarriors">BinaryWarriors</string>
    <string name="name_not_set">Name not set</string>
    <string name="email_not_set">Email not set</string>
    <string name="profile_image_not_set">Profile image not set</string>
    <string name="event_name_not_set">Event name not set</string>
    <string name="event_type_not_set">Event type not set</string>
    <string name="event_date_not_set">Event date not set</string>
    <string name="event_description_not_set">Event description not set</string>
    <string name="event_host_not_set">Event host not set</string>
    <string name="event_status_not_set">Event status not set</string>
    <string name="event_id_not_set">Event id not set</string>
    <string name="profile_not_set">Profile not set</string>
    <string name="event_not_set">Event not set</string>
    <string name="event_not_found">Event not found</string>
    <string name="event_not_approved">Event not approved</string>
    <string name="event_not_hosted">Event not hosted</string>
    <string name="event_not_registered">Event not registered</string>
    <string name="event_not_unregistered">Event not unregistered</string>
    <string name="event_not_cancelled">Event not cancelled</string>
    <string name="event_not_completed">Event not completed</string>
    <string name="event_not_started">Event not started</string>
    <string name="event_not_ended">Event not ended</string>
    <string name="event_not_joined">Event not joined</string>
    <string name="event_not_left">Event not left</string>
    <string name="please_log_in"> Please log in to view profile data.</string>
    <string name="error_loading_name">Error loading name</string>
    <string name="error_loading_email">Error loading email</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="error_loading_event_name">Error loading event name</string>
    <string name="error_loading_event_type">Error loading event type</string>
    <string name="error_loading_event_date">Error loading event date</string>
    <string name="error_loading_event_description">Error loading event description</string>
    <string name="error_loading_event_host">Error loading event host</string>
    <string name="error_loading_event_status">Error loading event status</string>
    <string name="error_loading_event_id">Error loading event id</string>
    <string name="error_loading_profile">Error loading profile</string>
    <string name="error_loading_event">Error loading event</string>
    <string name="error_loading_event_not_found">Error loading event not found</string>
    <string name="error_loading_event_not_approved">Error loading event not approved</string>
    <string name="error_loading_event_not_hosted">Error loading event not hosted</string>
    <string name="volunteer_events">Volunteer Events</string>
    <string name="wallet">Wallet</string>
    <string name="host_event">Host Event</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="communicate">Communicate</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_report">Report</string>
    <string name="view_volunteer_applications">View Volunteer Applications</string>
    <string name="account">Account</string>
    <string name="accept">Accept</string>
    <string name="create_new_event">Create New Event</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="drawer_section_account">Account</string>
    <string name="drawer_section_communicate">Communicate</string>
    <string name="drawer_section_app_actions">App</string>
    <string name="sign_out_drawer">Sign Out</string>
    <string name="menu_view_event_details">View Details</string>
    <string name="menu_bookmark_event">Bookmark Event</string>
    <string name="menu_share_event">Share Event</string>
    <string name="menu_report_event">Report Event</string>
    <string name="menu_profile_details">Profile Details</string>
        <string name="manage_my_events">Manage My Events</string>
        <string name="logout">Logout</string>
    <string name="home">Home</string>
     <string name="bottom_nav_organizer_home">Home</string>
    <string name="bottom_nav_hosted_events">My Events</string>
    <string name="bottom_nav_organizer_applications">Applicants</string>
    <string name="bottom_nav_organizer_profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="bottom_nav_organizer_activity_summary">Summary</string>
        <string name="title_employer_home">Employer Home</string>
        <string name="title_post_new_job">Post New Job</string>
        <string name="title_employer_posted_jobs">My Posted Jobs</string>
        <string name="title_employer_applications">View Applications</string>
        <string name="title_employer_profile">Manage Profile</string>
        <string name="category_account">Account</string>
        <string name="action_sign_out">Sign Out</string>
    <string name="welcome_employer_placeholder">Welcome, Employer!</string>
    <string name="action_post_new_job">Post New Opportunity</string>
    <string name="action_view_my_posted_jobs">View My Posted Opportunities</string>
    <string name="action_view_applications">View Volunteer Applications</string>
    <string name="action_manage_employer_profile">Manage Organization Profile</string>
    <string name="menu_browse_jobs">Browse Jobs</string>
    <string name="menu_my_activity">My Applications</string>
    <string name="menu_browse_events">Events</string>
        <string name="menu_employer_dashboard">Dashboard</string>
        <string name="menu_employer_post_job">Post Job</string>
        <string name="menu_employer_posted_jobs">Posted Jobs</string>
        <string name="menu_employer_applications">Applications</string>
        <string name="menu_employer_profile">Profile</string>
    <string name="decline">Decline</string>
    <string name="john_doe_wants_to_chat">John Doe wants to chat</string>
</resources>