<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_employer_home"
            android:icon="@drawable/ic_home_selector"
            android:title="@string/title_employer_home" />
        <item
            android:id="@+id/nav_employer_post_job"

        android:icon="@drawable/ic_add_circle_selector"
        android:title="@string/title_post_new_job" />
        <item
            android:id="@+id/nav_employer_posted_jobs"
            android:icon="@drawable/ic_view_list_selector"
            android:title="@string/title_employer_posted_jobs" />
        <item
            android:id="@+id/nav_employer_applications"
            android:icon="@drawable/ic_applications_selector"
            android:title="@string/title_employer_applications" />
        <item
            android:id="@+id/nav_employer_profile_management"
            android:icon="@drawable/ic_profile_selector"
            android:title="@string/title_employer_profile" />
    </group>

    <item android:title="@string/category_account">
        <menu>
            <item
                android:id="@+id/nav_employer_sign_out"
                android:icon="@drawable/ic_exit_to_app_selector"
                android:title="@string/action_sign_out" />
        </menu>
    </item>
</menu>

