<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_organizer_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_organizer_profile"
            android:icon="@drawable/ic_person_24"
            android:title="@string/my_profile" />

        <!-- "Create New Event" is an action to a specific fragment/activity -->
        <item
            android:id="@+id/nav_drawer_create_event"
            android:icon="@drawable/ic_add_circle_24"
            android:title="@string/create_new_event" />

        <!-- Optional: Add other top-level destinations here if needed -->
        <!-- Example:
        <item
            android:id="@+id/nav_hosted_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/bottom_nav_hosted_events" />
        <item
            android:id="@+id/nav_organizer_applications"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/bottom_nav_organizer_applications" />
        -->
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_drawer_messages"
                android:icon="@drawable/ic_message_24"
                android:title="@string/messages" />
            <item
                android:id="@+id/nav_drawer_notifications"
                android:icon="@drawable/ic_notifications_24"
                android:title="@string/notifications" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_drawer_settings"
                android:icon="@drawable/ic_settings_24"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_drawer_logout"
                android:icon="@drawable/ic_logout_24"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
