<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_employer_home"
            android:icon="@drawable/ic_dashboard_selector"
            android:title="@string/menu_employer_dashboard" />

        <item
            android:id="@+id/nav_employer_post_job"
            android:icon="@drawable/ic_add_box_selector"
            android:title="@string/menu_employer_post_job" />

        <item
            android:id="@+id/nav_employer_posted_jobs"
            android:icon="@drawable/ic_list_alt_selector"
            android:title="@string/menu_employer_posted_jobs" />

        <item
            android:id="@+id/nav_employer_applications"
            android:icon="@drawable/ic_people_selector"
            android:title="@string/menu_employer_applications" />

        <item
            android:id="@+id/nav_employer_profile_management"
            android:icon="@drawable/ic_settings_selector"
            android:title="@string/menu_employer_profile" />

    </menu>

