<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/buttonColor"
    android:gravity="bottom"
    android:padding="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

<de.hdodenhof.circleimageview.CircleImageView
android:layout_width="@dimen/nav_header_profile_image_width"
    android:layout_height="@dimen/nav_header_profile_image_height"
    android:id="@+id/pro1"
    android:src="@drawable/default_profile_image"
    android:contentDescription="@string/nav_header_desc"
    app:civ_border_color="@android:color/white"
    app:civ_border_width="2dp"/>

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/profilename2"
android:text="@string/nav_header_title"
    android:textColor="#ffffff"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/nav_header_subtitle"
    android:id="@+id/profileemail2"
    android:textColor="#ffffff"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>