<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".employer.ui.home.EmployerHomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textViewEmployerWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_employer_placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>

            <Button
                android:id="@+id/buttonEmployerPostNewJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_post_new_job"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_add_circle_default"/>
            <!-- Using one of the icons -->

            <Button
                android:id="@+id/buttonEmployerViewPostedJobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_view_my_posted_jobs"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_view_list_default"/>

            <Button
                android:id="@+id/buttonEmployerViewApplications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_view_applications"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_applications_default"/>

            <Button
                android:id="@+id/buttonEmployerManageProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_manage_employer_profile"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_profile_default"/>

            <!-- You can add more quick actions or summary information here -->
            <!-- For example, a summary of active jobs or recent applications -->

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

